2011-04-28  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Dirk Schulze.

        [Cairo] Text underline is not shadowed when text-shadow is enabled
        https://bugs.webkit.org/show_bug.cgi?id=48074

        Updated pixel results for this test. They were previously incorrect
        because text underlines were not shadowed.

        * platform/gtk/fast/text/stroking-decorations-expected.png:
2011-04-28  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Dirk Schulze.

        [Cairo] Text underline is not shadowed when text-shadow is enabled
        https://bugs.webkit.org/show_bug.cgi?id=48074

        Use ShadowContext to enable shadows for text underlines. Also remove quite a bit
        of duplicate code in GraphicsContext used for stroking lines. This code looks like it was
        originally copied from the CG GraphicsContext.

        * platform/graphics/GraphicsContext.h: Make adjustLineToPixelBoundaries so that we
          can call it from a static helper function.
        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::calculateStrokePatternOffset): Abstracted this code into a helper.
        (WebCore::drawLineOnCairoContext): Abstracted this code into a helper. We need to
        call it multiple times when shadowing text underlines.
        (WebCore::GraphicsContext::drawLine): Use drawLineOnCairoContext.
        (WebCore::GraphicsContext::strokeArc): Use calculateStrokePatternOffset.
        (WebCore::GraphicsContext::drawLineForText): Use drawLineOnCairoContext.

Canonical link: https://commits.webkit.org/74989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85279 268f45cc-cd09-0410-ab3c-d52691b4dbfc